# rag-experiment-kit

./: .env.example  .gitignore  README.md  Taskfile.yml  docker-compose.yml  pyproject.toml
.claude/commands/: implement-paper.md
configs/pipelines/: baseline.yaml  graphrag.yaml
docs/: Adding-a-Paper.md  Architecture.md  Home.md  Roadmap.md  Working-Principles.md
notebooks/: 01_quickstart.py
papers/contextual_retrieval/: NOTES.md  meta.yaml
papers/graphrag_2404.16130/: NOTES.md  meta.yaml
src/rag/: __init__.py  cli.py  config.py  logging.py  scaffolding.py  tracing.py  types.py
src/rag/data/: __init__.py  chunking.py  ingest.py
src/rag/data/sources/: __init__.py  base.py  web.py  wikipedia.py
src/rag/embedding/: __init__.py  base.py  ollama_embed.py
src/rag/evaluation/: __init__.py  judge.py  ragas_eval.py  runner.py  synth.py
src/rag/llm/: __init__.py  base.py  ollama.py  vllm.py
src/rag/pipelines/: __init__.py  base.py  baseline.py
src/rag/techniques/: __init__.py
src/rag/techniques/contextual_retrieval/: __init__.py  chunker.py  pipeline.py  prompts.py
src/rag/techniques/graphrag/: __init__.py  build.py  community.py  entity_index.py  extractor.py  graph.py  pipeline.py  prompts.py  retriever.py  store.py  summarizer.py
src/rag/tracking/: __init__.py
src/rag/vectorstores/: __init__.py  base.py  qdrant_store.py
tests/: test_chunking.py  test_graph_build.py
ui/: app.py
